# Analyse_FASTER

./: ._CMakeLists.txt  Analyse_Main.cxx  CfCORR.scr  CfEcal.scr  CfEcalTshift.scr  Cfraw.scr  blabla  myEcalfiles.scr  myex.scr  ref_corr_spectra.scr  terminal.txt
Analyse_FASTER/: Analyse_Main.cxx  Analyse_Main.h  CMakeLists.txt  myAnalyse
Analyse_FASTER/PID/FROZEN/N-SI-125/: sample.pid
Analyse_FASTER/PID/FROZEN/N-SI-125/Commissionning/: sample.pid
Analyse_FASTER/PID/FROZEN/PoC/: sample.pid
Analyse_FASTER/Parameter_Files/FROZEN/N-SI-125/: calibration.data
Analyse_FASTER/Parameter_Files/FROZEN/N-SI-125/Commissionning/: PARIS_Angles.txt  calibration_CeBr3.data  calibration_LaBr3.data  sample.pid
Analyse_FASTER/include/: CAnalyse.h  CDetecteurType.h  CDetectors.h  CExperiment.h  CHit.h  CMTObject.h  colormod.h
Analyse_FASTER/src/: CAnalyse.cxx  CDetecteurType.cxx  CDetectors.cxx  CExperiment.cxx  CHit.cxx  CHitCollection.cxx
Parameter_Files/FROZEN/frozen/: PARIS110.align  PARIS235.align  PARIS262.align  PARIS278.align  PARIS50.align  PARIS90.align  PARIS_Angles.txt  calibration.data  removelines.sh
build2/: CMakeCache.txt  CfEcal.scr  CfEcalTshift.scr  Cfraw.scr  Makefile  PSDParameter1_PARIS.txt  RootLibDict.cxx  cmake_install.cmake  compile_commands.json  myAnalyse
build2/.cmake/api/v1/reply/: cache-v2-6d6d47e98aa7304fe2db.json  cmakeFiles-v1-4b9ea8e3d3ff1d52f538.json  codemodel-v2-38507628650dc9e7000c.json  target-RootLib-Debug-61b1f98e8f700247cb29.json
build2/Parameter_Files/FROZEN/frozen/: OldPARIS_Angles.txt
include/: .gitignore  CAnalyse.h  CDetecteurType.h  CDetectors.h  CEventBuilder.h  CExperiment.h  CFissionEvent.h  CHit.h  CHitCollection.h  CMTTHxx.h  CTools.h  ProgressBar.h
src/: CAnalyse.cxx  CAnalyse_old.cxx  CDetecteurType.cxx  CDetectors.cxx  CExperiment.cxx  CFissionEvent.cxx  CHit.cxx  CHitCollection.cxx  CTools.cxx
testing/: CMakeCache.txt  CfEcal.scr  CfEcalTshift.scr  Cfraw.scr  Makefile  RootLibDict.cxx  cmake_install.cmake  compile_commands.json  libRootLibDict_rdict.pcm  myAnalyse  refcalib.scr
testing/.cmake/api/v1/reply/: cache-v2-176afcc5a1c13afccebb.json  cmakeFiles-v1-51e4d1ebd84c8341d567.json  codemodel-v2-bae0da9828a0d94567ef.json  index-2025-06-18T08-57-14-0364.json  target-RootLib-Debug-076450b2c8a3f86e4752.json  target-RootLibDict-Debug-2598e1bf75babf244ac3.json  target-myAnalyse-Debug-877c831d78558fceb0b6.json
testing/PID/: Comsolplots.ipynb
testing/Parameter_Files/FROZEN/frozen/: ._calibration.data
